Error occured in tailwindcss4 using grid element I tried to fix certificates, after I begin to focus on dark mode I got "Error: Cannot apply unknown utility class: dark:" error I can't move on right now.

--- a/Bitirme Projem/src/input.css
+++ b/Bitirme Projem/src/input.css
@@ -14,15 +14,6 @@
     div{
         @apply flex  m-auto
     }
-    ol{
-        @apply block
-    }
-    ul{
-        @apply block
-    }
-    li{
-        @apply block
-    }
     h3{
         @apply text-center font-bold
     }
@@ -30,7 +21,7 @@
         @apply text-center font-black
     }
     p{
-        @apply p-8 text-justify
+        @apply p-4 text-justify
     }
     span{
         @apply font-bold
@@ -47,7 +38,7 @@
 }
 
 .level{
-    @apply min-h-screen overflow-auto block p-8 bg-primary-dark  text-black
+    @apply min-h-screen overflow-auto block p-8 bg-primary-dark text-black dark: bg-primary-light
 }
 #level-1{
     @apply sticky top-0
@@ -65,23 +56,20 @@
     @apply sticky top-0
 }
 #form{
-    @apply flex-col m-auto px-1 bg-primary-light brightness-105 w-1/2 rounded-2xl
-}
-#form-btn{
-    @apply block m-auto
+    @apply flex-col m-auto px-1 bg-primary-light w-1/2 rounded-2xl
 }
 .headline{
     @apply bg-primary-light text-white font-extrabold text-3xl p-4 drop-shadow-lg min-h-2.5 min-w-full text-center
 }
-.certificate{
-    @apply w-1/1 bg-primary-dark brightness-150 rounded-2xl flex justify-start md:justify-between
-}
-.certificate-name{
-    @apply block
-}
 .btn{
-    @apply block bg-primary-light text-white font-semibold py-2 px-4 rounded-lg border-2 border-white h-1/2 w-1/4 transition-all duration-60 
+    @apply block m-auto bg-primary-light text-white font-semibold py-2 px-4 rounded-lg border-2 border-white h-1/2 w-1/4 transition-all duration-60 
 }
 .btn:hover{
     @apply border-[#f5f5f5] active:bg-[#7036a2] shadow-md brightness-125 rounded-full scale-90
+}
+.btn-2{
+    @apply block m-auto bg-primary-dark text-black font-semibold py-2 px-4 rounded-lg border-2 border-black h-1/2 w-1/4 transition-all duration-60 
+}
+.btn-2:hover{
+    @apply border-[#694414] active:bg-[#b67c31] shadow-md brightness-125 rounded-full scale-90
 }
